--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,68 +1,101 @@
 /* wire frame: TODO: delete later */
+html {
+    height: 100%;
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #0a0f0900 100%);
+}
+
 header,
- main,
-  footer {
+main,
+footer {
     border: 1px solid navy;
     scroll-behavior: smooth;
 
-  }
-  
-  
-  /* reset */
-  body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* element selectors */
-  body {
+}
+
+
+
+
+
+
+/* element selectors */
+body {
     display: flex;
     flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     height: 100vh;
-  }
-  img {
-      width: 100%;
-  }
-  header {
-    background: url('./../images/background.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    border: none;
+    padding: 40px 60px;
+    font-size: 30px;
+    position: relative;
+    background: black;
+    color: yellow;
+    text-transform: uppercase;
+    border: transparent;
+    transition: all 0.7s;
+    overflow: hidden;
+    border-radius: 1px;
+}
+
+button:hover {
+    color: navy;
+}
+
+
+header {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    color:darkgrey
-  
-  }
-  
-  header, 
-  main,
-  footer {
+    color: lightgray;
+    font-size: 15px;
+    background-color: black;
+}
+
+header,
+main,
+footer {
     padding: 1.5rem;
-  }
-  
-  main {
+}
+
+main {
     flex-grow: 1;
-  }
-  
-  
-  /* classes */
-  .mt- {
-    margin-top: 0.75rem;
-  }
-
-  .pt {
-    padding-top: 1.5rem;
-
-  }
-
-  .challenge-1 {
-    width: 25%;
-  }
-
-
-
-
+}
 
 
 /* classes */
+.mt- {
+    margin-top: 0.75rem;
+}
+
+.pt {
+    padding-top: 1.5rem;
+
+}
+
+.challenge-1 {
+    width: 25%;
+}
+
+
+
+.navlinks {
+    text-decoration: none;
+    margin: 5px;
+    color: lightgray;
+}
+
+.navlinks:visited {
+    color: lightgray;
+}
+
+@media screen and (max-width:600px) {
+    body {
+
+        background-color: lightsteelblue;
+    }
+
+}
